# workCpp

./: CMakeLists.txt
src/: graphs.cpp  kruskal.cpp  prim.cpp
